# git-template

cc/: CMakeLists.txt  makefile
cc/src/: main.cc
cc/test/: test-example.cc
py/: .travis.yml  setup.py
py/pkg/: __init__.py
py/test/: test_example.py
tex/: .gitignore  main.bib  main.tex  makefile
tex/sections/: abstract.tex  help.tex
